run-improvements (#12)
* v1

* added fix for ubuntu

* v3

* Added docker publish

* log changed

* log changed

* log changed

* Changed description

* Add configurable defaultBlocked flag for role access levels (#14)

When enabled, users not matching any ids/channels/whitelist for the
regular tier are blocked instead of defaulting to REGULAR access.

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>

* Move language instruction out of role content into system prompt (#16)

* Move language instruction out of role content into system prompt

Language instruction is now added exclusively via SpringAIGateway#appendLanguageInstruction
for every request, so it no longer belongs in the default role content. Removes the
duplicated {language_code} suffix from the default role in both en/ru properties files
and deletes the now-dead resolveLanguagePlaceholder method from DefaultAICommandFactory.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Changed description

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>

* Updated version

* Updated version

* fix elastic

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>